fix: Remove infuriating tap delay on mobile
This was absolutely killing me and I'm glad to have found the setting to
turn it off.

--- a/src/app.css
+++ b/src/app.css
@@ -17,6 +17,10 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+    touch-action: manipulation;
+}
+
 .card-title {
     @apply justify-center text-2xl;
 }
